# hyperscoop

./: .clippy.toml  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.ch.md  README.en.md  README.md  battery-report.html  build.rs  changelog.md  daktilo.toml  deny.toml  install.ps1  justfile  log.txt  manifests.txt  mycert.pem  mykey.pem  package-lock.json  package.json  roadmap.md  rust-chaintool.toml
.cargo/: config.toml
.github/: FUNDING.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  feature.yml  feature_request.yml
.github/workflows/: codeql.yml  release_publish.yml
.workflow/: master-pipeline.yml
asset_scripts/: buckets.ps1  core.ps1  decompress.ps1  install.ps1  json.ps1  manifest.ps1  system.ps1  test.ps1  versions.ps1
benches/: hash_benchmark.rs
crates/command/: Cargo.toml
crates/command/src/: buckets.rs  cache.rs  cat.rs  config.rs  export.rs  home.rs  import.rs  info.rs  init_env.rs  install.rs  lib.rs  list.rs  main.rs  merge.rs  reset.rs  search.rs  shim.rs  test.rs  uninstall.rs  update.rs
crates/command/src/install/: aria2.rs  check.rs  cli_options_store.rs  download.rs  env_operate.rs  installer.rs  parse_lifecycle_scripts.rs  sevenzip.rs  shim_and_shortcuts.rs
crates/command/src/manifest/: install_manifest.rs  manifest.rs  manifest_deserialize.rs  mod.rs  search_manifest.rs  uninstall_manifest.rs  update_manifest.rs
crates/command/src/uninstall/: env_set.rs  shim_and_shortcuts.rs
crates/command/src/update/: update.rs
crates/command/src/utils/: detect_encoding.rs  get_file_or_dir_metadata.rs  git.rs  invoke_hook_script.rs  mod.rs  progrees_bar.rs  pull.rs  repair_dirty_json.rs  request.rs  safe_check.rs  system.rs  utility.rs
crates/command/src/utils/progrees_bar/: gitoxide.rs
crates/hash/: Cargo.toml
crates/hash/src/: main.rs
crates/hscoop_macro/: Cargo.toml
crates/hscoop_macro/src/: lib.rs  main.rs
crates/shim/: Cargo.toml
crates/shim/src/: main.rs
example/: test.rs
examples/: indicatif_demo.rs  multi.rs  test.rs  url_parse.rs  validate.rs
hyperscoop_source_bucket/bucket/: hp.json  hyperscoop.json
hyperscoop_source_bucket/script/: benchmark.ps1
locales/: en.yml  zh.yml
log/: hash.json  log.json
resources/: THIRD_PARTY_BINARIES.md
script/: benchmark.ps1  bump_version.py  changelog.py  create_release.py  crypto.py  demo.ts  file_count.ps1  get_all_repos_name.py  get_latest_version.py  hash.py  hs.ps1  publish.py  publish_release.py  pyproject.toml  set_env.ps1  test.rs
shim_proxy/: Cargo.toml  README.en.md  README.md
shim_proxy/generate_shim/: shim.shim
src/: check_self_update.rs  command.rs  crypto.rs  i18n.rs  logger_err.rs  main.rs
src/comand_args/: bucket_args.rs  cache.rs  cat.rs  checkup.rs  export.rs  home.rs  import.rs  info.rs  list.rs  merge_bucket.rs  search.rs  shim.rs  status.rs  uninstall.rs  update.rs  which.rs
src/command_args/: alias.rs  bucket_args.rs  cache.rs  cat.rs  checkup.rs  cleanup.rs  config.rs  export.rs  home.rs  import.rs  info.rs  install.rs  list.rs  merge_bucket.rs  mod.rs  prefix.rs  reset.rs  search.rs  self_update.rs  shim.rs  status.rs  uninstall.rs  update.rs  which.rs
src/hyperscoop_middle/: init_env.rs  invoke_bucket.rs  invoke_cache.rs  invoke_cat.rs  invoke_cheanup.rs  invoke_checkup.rs  invoke_config.rs  invoke_export.rs  invoke_home.rs  invoke_import.rs  invoke_info.rs  invoke_install.rs  invoke_list.rs  invoke_merge.rs  invoke_prefix.rs  invoke_reset.rs  invoke_search.rs  invoke_shim.rs  invoke_status.rs  invoke_uninstall.rs  invoke_update.rs  invoke_which.rs  mod.rs
