[package]
name = "hyperscoop"
version = "1.0.3"
edition.workspace = true
publish = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
default = []  # 默认所有feature禁用



[dependencies]
# 只适用于当前包 ,可以直接使用这些依赖，而工作区的其他成员包无法自动继承这些依赖。
# 当依赖被标记为 "可选 optional" 时，意味着它默认不会被编译
serde = { version = "1.0.213" }
log = { workspace = true }
clap = { version = "4.5.20", features = ["derive", "cargo", "color"] }
crossterm = { workspace = true }
command_util_lib = { workspace = true }
clap-verbosity-flag = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json.workspace = true




[workspace.dependencies]
serde = { version = "1.0.213", features = ["derive"] }
log = "0.4.22"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
trybuild = "1.0.101"
command_util_lib = { path = "crates/command" }
clap-verbosity-flag = "2.2.2"
anyhow = "1.0.91"
serde_json = "1.0.132"

[[bin]]
name = "hyperscoop"
path = "src/main.rs"


[workspace]  # 定义一个工作区
members = ["crates/command"]
resolver = "2"
[workspace.package]
edition = "2021"
publish = false  #
authors = ["superwindcloud<<1178933440@qq.com>"]
description = "一个更快更强更精美的Windows包管理器 "
license = "MIT OR Apache-2.0"
repository = "https://gitee.com/superwindcloud/hyperscoop"
readme = "README.md"
homepage = "https://gitee.com/superwindcloud"
rust-version = "1.82.0"
categories = ["command-line-utilities", "development-tools", "command-line-interface"]
keywords = ["scoop", "windows", "package-manager", "rust", "powerful-tool"]
exclude = ["target", "README.md", "LICENSE", "hyperscoop", "script"]
include = ["src/**/*", "Cargo.toml", "build.rs", "Cargo.lock"]

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"



[dev-dependencies] # 依赖项仅在开发和测试过程中使用，
# 例如 `cargo test` 或 `cargo bench` , 'cargo build --tests` ,`cargo build --examples` |
criterion = "0.5.1"
trybuild = "1.0.101"

[profile.release]
debug = false
lto = true   # 链接时间优化
panic = "unwind"
opt-level = 3
strip = "symbols"
codegen-units = 1
debug-assertions = false
overflow-checks = false
rpath = false   # 关闭运行时路径

[profile.dev]
opt-level = 0
overflow-checks = false     # 关闭整数溢出检查
debug = true                # 开启调试信息
lto = false                  # 关闭链接时间优化
panic = "unwind"            # 异常处理方式为unwind
incremental = true          # 开启增量编译
codegen-units = 256           # 编译单元数量
debug-assertions = true      # 开启调试断言
rpath = false                # 关闭运行时路径

[build-dependencies]  # 这些依赖项仅在构建脚本（build.rs 文件）中使用
criterion = "0.5.1"

[target.x86_64-pc-windows-msvc.dependencies] # 依赖项仅在 Windows 平台上使用。
criterion = "0.5.1"


[package.metadata.release]
version-increment = "patch"  # 版本号递增方式为 patch

[package.metadata.release.github]
repository = "superwindcloud/hyperscoop"
username = "superwindcloud"
[package.metadata.docs.rs]
features = ["default"]
