[package]
name = "shim"
edition = "2021"
authors = ["superwindcloud<<1178933440@qq.com>"]
description = "A shim  proxy launcher"
version= "1.0.0"

[dependencies]
windows = { version = "0.61.1", features = ["Win32",
  "Win32_System", "Win32_UI", "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging", "Win32_System_JobObjects",
  "Win32_System_Console", "Win32_System_Threading",
  "Win32_System_LibraryLoader", "Win32_Security",
  "Win32_Storage_FileSystem", "Win32_Foundation",
  "Win32_System_Registry"] }

color-eyre = "0.6.3"
[lints.clippy]
unsafe_code = "warn"
unreachable_pub = "warn"


