[package]
name = "command_util_lib"
version.workspace = true
edition.workspace = true
publish = { workspace = true }
authors = { workspace = true }
description = "hyperscoop 的后端, 用于处理命令行参数 ,加载一些系统配置等"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
serde = { workspace = true }
log = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = { workspace = true }
serde_json = "1.0.132"
regex = "1.11.1"
crossterm = { workspace = true }
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
zip = "2.2.0"
encoding = "0.2.33"
rayon = "1.10.0"
console = "0.15.8"
rand = "0.8.5"
indicatif = "0.17.8"
once_cell = "1.20.2"
tokio = { workspace = true }
human-panic = { workspace = true }
webbrowser = "1.0.3"
git2 = { workspace = true }
rust_file_encode_mode_convert = "11.45.14"
winreg = "0.55.0"
windows-sys = { version = "0.59.0", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation", "Win32_Graphics_Gdi"

] }
widestring = "1.1.0"
dialoguer = "0.11.0"
gix = { version = "0.70.0", features = [
  "blocking-http-transport-reqwest",
  "blocking-network-client",
  "worktree-mutation", ] }
thiserror = "2.0.11"
gix-object = "0.47.0"
dashmap = "6.1.0"
windows = "0.61.1"
mslnk = "0.1.8"
textwrap = { version = "0.16.2" }
bat = { workspace = true }
flate2 =  {workspace = true  }



[lib]
name = "command_util_lib"
crate-type = ["lib"]
proc-macro = false
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/bin.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"


[[bin]]
name = "indicatif_demo"
path = "src/bin/indicatif_demo.rs"
