[package]
name = "command_util_lib"
version.workspace = true
edition.workspace = true
publish = { workspace = true }
authors = { workspace = true }
description = "hyperscoop 的后端, 用于处理命令行参数 ,加载一些系统配置等"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
serde = { workspace = true }
log = { workspace = true }
clap = { version = "4.5.51", features = ["derive"] }
anyhow = { workspace = true }
serde_json = "1.0.145"
regex = "1.12.2"
crossterm = { workspace = true }
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
encoding = "0.2.33"
rayon = "1.11.0"
console = "0.15.11"
rand = "0.8.5"
indicatif = "0.17.11"
once_cell = "1.21.3"
tokio = { workspace = true }
human-panic = { workspace = true }
webbrowser = "1.0.6"
git2 = { workspace = true }
rust_file_encode_mode_convert = "11.45.14"
winreg = { version = "0.55.0" }
dialoguer = "0.11.0"
gix = { version = "0.70.0", features = [
  "blocking-http-transport-reqwest",
  "blocking-network-client",
  "worktree-mutation", ] }
thiserror = "2.0.17"
gix-object = "0.47.0"
dashmap = "6.1.0"
windows = { version = "0.61.3", features = ["Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging","Win32_Security",
  "Win32_System_Registry" , "Win32_System_Threading"] }
textwrap = { version = "0.16.2" }
bat = { workspace = true }
flate2 = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = {workspace = true}
os_info = "3.12.0"
zip = "6.0.0"
windows-sys = "0.59.0"
sha1 = "0.10.6"
shortcuts-rs = "1.1.1"
sysinfo =  { version = "0.34.2" , features = ["system", "windows"] }
comfy-table =  {workspace = true}
which = {workspace = true}
futures = "0.3.31"
wait-timeout = "0.2.1"




[lib]
name = "command_util_lib"
crate-type = ["lib"]
proc-macro = false
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/bin.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"


[[bin]]
name = "indicatif_demo"
path = "src/bin/indicatif_demo.rs"
