[package]
name = "hash"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true

[dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
