[package]
name = "hscoop_macro"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }


[lib]
name = "hscoop_macro"
path = "src/lib.rs"
proc-macro = true


[lints]
workspace = true

[[bin]]
name = "hscoop_crate_demo"
path = "src/main.rs"
