[package]
name = "shim"
edition.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true
version.workspace = true

[dependencies]
windows = { version = "0.61.3", features = ["Win32",
  "Win32_System", "Win32_UI", "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging", "Win32_System_JobObjects",
  "Win32_System_Console", "Win32_System_Threading",
  "Win32_System_LibraryLoader", "Win32_Security",
  "Win32_Storage_FileSystem", "Win32_Foundation",
  "Win32_System_Registry"] }

color-eyre = {workspace =  true }
[lints]
workspace = true
